Fix z-index for mobile sidebar vs. footer

--- a/styles/helvetica/sidebar.scss
+++ b/styles/helvetica/sidebar.scss
@@ -54,6 +54,7 @@
       width: 100%;
       height: 100%;
       background-color: rgba(221, 221, 221, 0.9);
+      z-index: 10;
     }
 
     .sidebar {
